--- a/css/cards.css
+++ b/css/cards.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 
 .blog-card {
     max-width: 550px;
@@ -12,8 +19,11 @@
     margin: 0 auto;
     overflow: hidden;
     border-radius: 0px;
+    -webkit-box-shadow: 0px 10px 20px -9px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 10px 20px -9px rgba(0, 0, 0, 0.5);
     text-align: center;
+    -webkit-transition:all 0.4s;
+    -o-transition:all 0.4s;
     transition:all 0.4s;
     background-size: cover;
 }
@@ -31,6 +41,8 @@
 .blog-card a{
     color:#fff;
     text-decoration:none;
+    -webkit-transition:all 0.2s;
+    -o-transition:all 0.2s;
     transition:all 0.2s
 }
 .blog-card .color-overlay {
@@ -41,9 +53,13 @@
     z-index: 10;
     top: 0;
     left: 0;
+    -webkit-transition: background 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
+    -o-transition: background 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
     transition: background 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
 .blog-card .gradient-overlay {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(21%, rgba(0, 0, 0, 0.6)));
+    background-image: -o-linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 21%);
     background-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 21%);
     width: 550px;
     height: 500px;
@@ -53,6 +69,7 @@
     z-index: 15;
 }
 .blog-card:hover{
+    -webkit-box-shadow: 0 18px 20px -9px rgba(0, 10, 30, 0.75);
     box-shadow: 0 18px 20px -9px rgba(0, 10, 30, 0.75);
 }
 .blog-card:hover .card-info {
@@ -73,14 +90,20 @@
     width: 100%;
     top: 0;
     left: 0;
+    -webkit-transition:all 0.6s;
+    -o-transition:all 0.6s;
     transition:all 0.6s
 }
 
 .blog-card:hover {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
     transform: scale(1.05)
 }
 
 .blog-card:hover h3:after{
+
+    -webkit-animation: changeLetter 0.3s 1 linear;
 
     animation: changeLetter 0.3s 1 linear;
     width:80%
@@ -96,6 +119,8 @@
 }
 .blog-card h3 a{
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    -webkit-transition:all 0.2s;
+    -o-transition:all 0.2s;
     transition:all 0.2s
 }
 .blog-card h3 a:hover{
@@ -109,7 +134,18 @@ h3:after {
     margin: 20px auto;
     border: 0;
     background: #BDA26B;
+    -webkit-transition:all 0.2s;
+    -o-transition:all 0.2s;
     transition:all 0.2s
+}
+
+@-webkit-keyframes changeLetter {
+    0% {
+        width: 10%;
+    }
+    100% {
+        width: 80%;
+    }
 }
 
 @keyframes changeLetter {
@@ -135,6 +171,7 @@ h3:after {
     text-decoration:underline
 }
 .card-info {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0;
     width: 100%;
@@ -146,6 +183,8 @@ h3:after {
     line-height: 24px;
     z-index: 20;
     opacity: 0;
+    -webkit-transition: bottom 0.64s, opacity 0.63s cubic-bezier(0.33, 0.66, 0.66, 1);
+    -o-transition: bottom 0.64s, opacity 0.63s cubic-bezier(0.33, 0.66, 0.66, 1);
     transition: bottom 0.64s, opacity 0.63s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
 
@@ -164,6 +203,7 @@ h3:after {
     color:#fff;
 }
 .card-info a:hover span{
+    -webkit-filter: brightness(10);
     filter: brightness(10);
     opacity:1
 }
@@ -234,11 +274,13 @@ h3:after {
     .utility-info ul{
         width:100%;
         margin:0;
+        -webkit-box-sizing:border-box;
         box-sizing:border-box
     }
     .utility-info li{
         width:49%;
         display:inline-block;
+        -webkit-box-sizing:border-box;
         box-sizing:border-box;
         margin:0
     }
@@ -266,22 +308,54 @@ h3:after {
 }
 
 .best-tour__first {
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
     transition: all 1s ease;
+    -webkit-animation: 1s bestLeft ease-out;
     animation: 1s bestLeft ease-out;
+    -webkit-animation-play-state: paused;
     animation-play-state: paused;
+    -webkit-animation-fill-mode:forwards;
     animation-fill-mode:forwards
 }
 .best-tour__second {
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
     transition: all 1s ease;
+    -webkit-animation: 1s bestCenter ease-out;
     animation: 1s bestCenter ease-out;
+    -webkit-animation-play-state: paused;
     animation-play-state: paused;
+    -webkit-animation-fill-mode:forwards;
     animation-fill-mode:forwards
 }
 .best-tour__third {
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
     transition: all 1s ease;
+    -webkit-animation: 1s bestRight ease-out;
     animation: 1s bestRight ease-out;
+    -webkit-animation-play-state: paused;
     animation-play-state: paused;
+    -webkit-animation-fill-mode:forwards;
     animation-fill-mode:forwards
+}
+
+@-webkit-keyframes bestLeft {
+    0% {
+
+    }
+    70%{
+        left: 10px;
+    }
+    80% {
+        opacity: 1;
+        left: -10px;
+    }
+    100%{
+        opacity: 1;
+        left: 0;
+    }
 }
 
 @keyframes bestLeft {
@@ -300,6 +374,21 @@ h3:after {
         left: 0;
     }
 }
+@-webkit-keyframes bestRight {
+    0% {
+
+    }
+    70%{
+        right: 10px;
+    }
+    80% {
+        right: -10px;
+    }
+    100%{
+        opacity: 1;
+        right: 0;
+    }
+}
 @keyframes bestRight {
     0% {
 
@@ -313,6 +402,22 @@ h3:after {
     100%{
         opacity: 1;
         right: 0;
+    }
+}
+@-webkit-keyframes bestCenter {
+    0% {
+
+    }
+    70%{
+        bottom: 10px;
+    }
+    80% {
+        opacity: 1;
+        bottom: -10px;
+    }
+    100%{
+        opacity: 1;
+        bottom: 0;
     }
 }
 @keyframes bestCenter {
@@ -407,6 +512,7 @@ h3:after {
     height: 150px;
     border: 0 solid #1E1E1E;
     background: rgba(2, 2, 2, 0.49);
+    -webkit-box-shadow:0 19px 19px -10px rgba(0, 0, 0, 0.63);
     box-shadow:0 19px 19px -10px rgba(0, 0, 0, 0.63)
 }
 .profile-username, .upsell,.profile-location,.primary-pro{
@@ -429,9 +535,12 @@ h3:after {
 .pagination-button{
     background-color:#2f2f31;
     border-color:#2f2f31;
+    -webkit-transition:all 0.2s;
+    -o-transition:all 0.2s;
     transition:all 0.2s
 }
 .pagination-button:hover{
+    -webkit-box-shadow:0 3px 8px rgba(0,0,0,0.2);
     box-shadow:0 3px 8px rgba(0,0,0,0.2)
 }
 .single-project .stats,.single-pen .stats {
@@ -459,11 +568,14 @@ h3:after {
 
 .single-pen:hover h3:after{
     width:40%;
+    -webkit-transition:all 0.2s;
+    -o-transition:all 0.2s;
     transition:all 0.2s
 }
 .pen-actions{
     border:0 !important
 }
 .meta{
+    -webkit-box-shadow:none !important;
     box-shadow:none !important
 }
