--- a/css/tour.css
+++ b/css/tour.css
@@ -20,18 +20,12 @@
 
 .tour {
     position: relative;
-    z-index: 5;
-}
-
-.tour__container {
-    width: 1330px;
-    margin: -110px auto 0 auto;
-    background-color: white;
-    padding: 30px 80px;
-    border-radius: 12px;
 }
 
 .tour-lvl {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -41,7 +35,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-bottom: 70px;
+    z-index: 3;
 }
 
 .tour-lvl__icon {
@@ -96,7 +90,7 @@
 
 .tour__item h3 {
     margin-bottom: 15px;
-    font-size: 26px;
+    font-size: 20px;
 }
 
 /*Слайдер тур*/
@@ -596,24 +590,28 @@ a.unit:active {
 }
 
 .tour__container {
-    width: 1330px;
-    margin: -110px auto 0 auto;
-    background-color: white;
-    padding: 30px 80px;
-    border-radius: 12px;
+
 }
 
 .tour-lvl {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    width: 100%;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-bottom: 70px;
+}
+
+.tour-lvl__container {
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    padding: 10px 20px 0 20px;
+    border-radius: 12px 12px 0 0;
 }
 
 .tour-lvl__icon {
@@ -666,10 +664,6 @@ a.unit:active {
     letter-spacing: 0.5px;
 }
 
-.tour__item h3 {
-    margin-bottom: 15px;
-    font-size: 26px;
-}
 
 /*Слайдер тур*/
 .tour-swiper {
